--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- My Style -->
-    <link rel="stylesheet" href="../Toko Shipishi/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Navbar Start -->
@@ -144,6 +144,6 @@
 
     <!-- My Java Script -->
 
-    <script src="../Toko Shipishi/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
